<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ics_new"
        android:title="@string/add_memo"
        android:showAsAction="ifRoom|withText">
    </item>

    <item
        android:id="@+id/menu_sort_important"
        android:title="@string/sorting_important">
    </item>

    <item
        android:id="@+id/menu_sort_date"
        android:title="@string/sorting_date">
    </item>

    <item
        android:id="@+id/menu_sort_title"
        android:title="@string/sorting_title">
    </item>

    <item
        android:id="@+id/menu_setting"
        android:title="@string/setting">
    </item>

    <item
        android:id="@+id/menu_delete_all_memo"
        android:title="@string/delete_all">
    </item>
</menu>